--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,14 +14,18 @@ classifiers = [
   "Operating System :: OS Independent",
 ]
 dependencies = [
-    "langchain>=0.0.27",
-    "langchain-openai>=0.3.15",
+    "langchain==0.3.25",
+    "langchain-openai==0.3.16",
     "numpy>=1.24.4",
     "openai>=1.78.1",
     "pdf2image>=1.17.0",
-    "pytesseract>=0.3.13",
     "pymupdf>=1.25.5",
     "opencv-python-headless>=4.11.0.86",
+    "langchain-core==0.3.60",
+    "tesseract>=0.1.3",
+    "pytesseract>=0.3.13",
+    "jupyter>=1.1.1",
+    "dotenv>=0.9.9",
 ]
 
 [build-system]
