--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ dependencies = [
     "pytesseract>=0.3.13",
     "jupyter>=1.1.1",
     "dotenv>=0.9.9",
+    "bert-score>=0.3.13",
+    "transformers>=4.51.3",
 ]
 
 [build-system]
