--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "dotenv>=0.9.9",
     "bert-score>=0.3.13",
     "transformers>=4.51.3",
+    "hydra-core>=1.3.2",
 ]
 
 [build-system]
