--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,9 @@ dependencies = [
     "hydra-core>=1.3.2",
 ]
 
+[project.scripts]
+shrunkiq = "shrunkiq.cli:main"
+
 [build-system]
 requires = ["setuptools>=61.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
