--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "bert-score>=0.3.13",
     "transformers>=4.51.3",
     "hydra-core>=1.3.2",
+    "pre-commit==3.8.0",
 ]
 
 [project.scripts]
@@ -42,5 +43,3 @@ build-backend = "setuptools.build_meta"
 pythonpath = [
   "."
 ]
-
-
