--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,8 @@ dependencies = [
     "transformers>=4.51.3",
     "hydra-core>=1.3.2",
     "pre-commit==3.8.0",
+    "rapidfuzz>=3.13.0",
+    "loguru>=0.7.3",
 ]
 
 [project.scripts]
