--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,10 @@ dependencies = [
     "thefuzz>=0.22.1",
     "scikit-image>=0.24.0",
     "scikit-learn>=1.6.1",
+    "editdistance>=0.8.1",
+    "torch>=2.7.0",
+    "torchvision>=0.22.0",
+    "torchmetrics>=1.7.2",
 ]
 
 [project.scripts]
