--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,10 @@ dependencies = [
     "torch>=2.7.0",
     "torchvision>=0.22.0",
     "torchmetrics>=1.7.2",
+    "streamlit>=1.45.1",
+    "plotly>=6.1.2",
+    "nest-asyncio>=1.6.0",
+    "watchdog>=6.0.0",
 ]
 
 [project.scripts]
